2001-11-21  Colin Walters  <walters@debian.org>

	* calc/calc-macs.el (calc-slow-wrapper): Move (point) call outside
	of (function ...) wrapper.

2001-11-20  Stefan Monnier  <monnier@cs.yale.edu>

	* derived.el (define-derived-mode): Create the abbrev-table
	from inside the `defvar'.

	* jit-lock.el (jit-lock-defer-time): New var.
	(jit-lock-defer-timer, jit-lock-buffers): New vars.
	(jit-lock-mode): Initialize them.  Cancel the timers more carefully.
	(jit-lock-function): Defer fontification if requested.
	(jit-lock-stealth-chunk-start): Pay attention to the new non-nil value.
	(jit-lock-stealth-fontify): Check the new `jit-lock-defer-multiline'
	text property.
	(jit-lock-deferred-fontify): New fun.

2001-11-20  Richard M. Stallman  <rms@gnu.org>

	* emacs-lisp/lisp-mode.el (lisp-interaction-mode):
	Set local-abbrev-table to lisp-mode-abbrev-table.

	* emacs-lisp/re-builder.el (reb-mode):
	Don't use define-derived-mode.  Call kill-all-local-variables.

	* emacs-lisp/lisp-mode.el (lisp-mode, emacs-lisp-mode):
	Don't use define-derived-mode.

	* help-mode.el (help-mode): Undo 2001-10-07 change.

	* replace.el (occur-mode): Undo 2001-5-20 change.

2001-11-20  Eli Zaretskii  <eliz@is.elta.co.il>

	* play/landmark.el: Mark lm-mode as special.

	* play/gomoku.el: Mark gomoku-mode as special.

2001-11-20  Juanma Barranquero  <lektu@terra.es>

	* emacs-lisp/re-builder.el (reb-change-target-buffer): New function.
	(top-level): Bind it to C-c C-b.
	(re-builder): Don't re-enter RE Builder Mode.

	* bs.el (bs-delete): Signal an error if the buffer cannot be deleted.

2001-11-20  Stefan Monnier  <monnier@cs.yale.edu>

	* progmodes/cperl-mode.el (cperl-perldoc): Require man before binding
	`manual-program'.

	* emacs-lisp/lisp-mode.el (lisp-fill-paragraph): Don't move back
	to a line without a comment.

2001-11-20  Eli Zaretskii  <eliz@is.elta.co.il>

	* dired.el (dired-listing-switches): Mention in the doc string
	that some switches are not supported by ls-lisp.el
